cleaned from useless classes and parameter

--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
         
         <div class="row">
           <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 mx-2">
-            <a href="#" class="sponsor-bg-blizz position-relative d-flex flex-column blizzcon">
+            <a href="#" class="sponsor-event sponsor-bg-blizz position-relative d-flex flex-column">
               <div class="red-fog"></div>
               <div class="my-auto">
                 <h3 class="text-center text-secondary">BLIZZCON</h3>
@@ -121,7 +121,7 @@
           </div>
 
           <div class="sponsor-holder mx-auto d-flex justify-content-center my-3 mx-2">
-            <a href="#" class="sponsor-bg-wolf position-relative d-flex flex-column white-wolf">
+            <a href="#" class="sponsor-event sponsor-bg-wolf position-relative d-flex flex-column">
               <div class="red-fog"></div>
               <div class="my-auto">
                 <h3 class="text-center text-secondary">WOD LATAM</h3>
