--- a/index.html
+++ b/index.html
@@ -58,36 +58,36 @@
     </div>
     
     <section class="position-relative">
-      <div class="beholder-bg"></div>
+      <div class="beholder-bg translucid"></div>
       <div class="bg-dark"></div>
       <div class="program-grid mx-3 mx-md-auto mt-3 w75">
         <h2 class="text-secondary mx-auto lato p-3 program-title align-self-center">Adventure Plan</h2>
         <article class="row position-relative p-3 dragon">
-          <div class="program-item-bg translucid z-1"></div>
+          <div class="program-item-bg bg-dark translucid z-1"></div>
           <div class="col-2 col-md-12 mb-md-2 text-secondary d-flex align-items-center justify-content-center"><i class="fas fa-dragon fa-2x"></i></div>
           <div class="col-3 col-md-12 text-primary d-flex align-items-center justify-content-center text-center p-2"><h6>Concert</h6></div>
           <div class="col-7 col-md-12 text-secondary d-flex"><p>Rhapsody of Fire opens with their epic Tales of the Emerald Sword</p></div>
         </article>
         <article class="row position-relative p-3 hat">
-          <div class="program-item-bg"></div>
+          <div class="program-item-bg translucid"></div>
           <div class="col-2 col-md-12 mb-md-2 text-secondary d-flex align-items-center justify-content-center"><i class="fas fa-hat-wizard fa-2x"></i></div>
           <div class="col-3 col-md-12 text-primary d-flex align-items-center justify-content-center text-center p-2"><h6>Cosplay</h6></div>
           <div class="col-7 col-md-12 text-secondary d-flex"><p>See your favorite characters on stage</p></div>
         </article>
         <article class="row position-relative p-3 dice">
-          <div class="program-item-bg"></div>
+          <div class="program-item-bg translucid"></div>
           <div class="col-2 col-md-12 mb-md-2 text-secondary d-flex align-items-center justify-content-center"><i class="fas fa-dice-d20 fa-2x"></i></div>
           <div class="col-3 col-md-12 text-primary d-flex align-items-center justify-content-center text-center p-2"><h6>D&D Games</h6></div>
           <div class="col-7 col-md-12 text-secondary d-flex"><p>The best Dungeon Masters await for legends to be created!</p></div>
         </article>
         <article class="row position-relative p-3 paint">
-          <div class="program-item-bg"></div>
+          <div class="program-item-bg translucid"></div>
           <div class="col-2 col-md-12 mb-md-2 text-secondary d-flex align-items-center justify-content-center"><i class="fas fa-paint-brush fa-2x"></i></div>
           <div class="col-3 col-md-12 text-primary d-flex align-items-center justify-content-center text-center p-2"><h6>Art Gallery</h6></div>
           <div class="col-7 col-md-12 text-secondary d-flex"><p>Inmortalized Heroes by the hands of proffesional illustrators</p></div>
         </article>
         <article class="row position-relative p-3 ring">
-          <div class="program-item-bg"></div>
+          <div class="program-item-bg translucid"></div>
           <div class="col-2 col-md-12 mb-md-2 text-secondary d-flex align-items-center justify-content-center"><i class="fas fa-ring fa-2x"></i></div>
           <div class="col-3 col-md-12 text-primary d-flex align-items-center justify-content-center text-center p-2"><h6>Lord Of The Rings</h6></div>
           <div class="col-7 col-md-12 text-secondary d-flex"><p>See the original artifacts wielded by the fellowship</p></div>
