--- a/tickets.html
+++ b/tickets.html
@@ -37,9 +37,14 @@
       <div class='m-2 mb-0 pb-5'>        
         <!--mobile navbar. Should be a dropdown, but that's JS-->
         <nav class='d-md-none d-flex justify-content-start'>
-          <button class='btn btn-link text-dark bg-secondary translucid  border-radius-50' type='button'>
+          <button class='btn btn-link text-dark bg-secondary translucid  border-radius-50' type='button' id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-scroll fa-2x"></i>
           </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="index.html">Home</a>
+            <a class="dropdown-item" href="tickets.html">Tickets</a>
+            <a class="dropdown-item" href="about.html">About</a>
+          </div>
         </nav>
       </div>
     </div>
@@ -207,6 +212,10 @@
     </div>
   </div>
 </footer>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 </html>
